Plug in/Line/api_VecApi.h

#define VM_BEGINPAINT     6
#define VS_PAPER_UNLIMITED 19401
#define VS_PAPER_A0        19402
#define VS_PAPER_A1        19403
#define VS_PAPER_A2        19404
#define VS_PAPER_A3        19405
#define VS_PAPER_A4        19406
#define VS_PAPER_A5        19407
#define VS_PAPER_A6        19408
#define VS_PAPER_B0        19409
#define VS_PAPER_B1        19410
#define VS_PAPER_B2        19411
#define VS_PAPER_B3        19412
#define VS_PAPER_B4        19413
#define VS_PAPER_B5        19414
#define VS_PAPER_B6        19415
#define VS_PAPER_C0        19416
#define VS_PAPER_C1        19417
#define VS_PAPER_C2        19418
#define VS_PAPER_C3        19419
#define VS_PAPER_C4        19420
#define VS_PAPER_C5        19421
#define VS_PAPER_C6        19422
#define VS_PAPER_ANSI_A    19423
#define VS_PAPER_ANSI_B    19424
#define VS_PAPER_ANSI_C    19425
#define VS_PAPER_ANSI_D    19426
#define VS_PAPER_ANSI_E    19427
#define VS_PAPER_LETTER    19428
#define VS_PAPER_LEGAL     19429
#define VS_PAPER_EXECUTIVE 19430
#define VS_PAPER_LEDGER    19431
#define VS_PAPER_USER      19432
//-------------------------------------
// VeCAD point
//-------------------------------------
typedef struct tagVLPOINT {
  double x;
  double y;
}VLPOINT;
//-------------------------------------
// VeCAD Arc
//-------------------------------------
typedef struct tagVLARC {
  VLPOINT Cen;
  double  Rh;
  double  Rv;
  double  Ang0;
  double  AngArc;
  double  AngRot;
}VLARC;
//-------------------------------------
// used to pass parameters with VM_BEGINPAINT message
//-------------------------------------
typedef struct tagVLPAINTSTRUCT {
    HDC     hdc;         // output device context
    RECT    rcPaint;     // output window rectangle
    double  DwgLeft;     // drawing's limits for the window
    double  DwgBottom;
    double  DwgRight;
    double  DwgTop;
    double  ScaleX;      // horiz. scale, mm/pixel
    double  ScaleY;      // vert. scale, mm/pixel
}VLPAINTSTRUCT;
//-------------------------------------
// Properties of "Navigator" window (aerial view)
//-------------------------------------
typedef struct tagVLNAVIGATOR {
  int      Left;   
  int      Top; 
  int      Width; 
  int      Height;
  COLORREF ColorZoomRect;
  BOOL     Realtime;
}VLNAVIGATOR;
//-------------------------------------
// Properties of "Layers Manager" window
//-------------------------------------
typedef struct tagVLLAYWIN {
  int      Left;       
  int      Top;       
  int      Width;      
  int      Height;    
}VLLAYWIN;
// Drawing's callback function
typedef int (CALLBACK* DWGPROC)(int iDwg, UINT Msg, int Prm1, int Prm2, double Prm3, double Prm4, void* Prm5);
/*
#ifndef __cplusplus
  extern "C" {
#endif
*/

int  VC_API vlGetVersion ();
// Registration for user copy of VeCAD DLL
BOOL VC_API vlRegistration  (int RegCode);
// Set application-defined function that will receive messages from VeCAD
BOOL VC_API vlSetMsgHandler (DWGPROC pfDwgProc);
/////////////////////////////////////////////////
// VeCAD window functions
HWND VC_API vlWndCreate     (HWND hParent, int Style, int X, int Y, int W, int H);
BOOL VC_API vlWndResize     (HWND hVecWnd, int X, int Y, int W, int H);
BOOL VC_API vlWndSetTitle   (HWND hVecWnd, LPCTSTR pTitle);
BOOL VC_API vlWndSetMaxRect (HWND hVecWnd, const RECT* pRect);
BOOL VC_API vlWndSetCursor  (HWND hVecWnd, HCURSOR hCursor);
/////////////////////////////////////////////////
// Drawing object functions
int  VC_API vlDocCreate    (HWND hwVec);
BOOL VC_API vlDocDelete    (int iDwg);
int  VC_API vlDocSetActive (int iDwg);
int  VC_API vlDocGetActive ();
BOOL VC_API vlDocCopy      (int iDwgSrc,int iDwgDest,int Mode);
/////////////////////////////////////////////////
// All Next functions work with current drawing that 
// are set by vlDwgSetCurrent function

/////////////////////////////////////////////////
// Layout (pages,layers, text styles, etc...
// Parameters can be accessed via vlData...
int  VC_API vlPageAdd       (LPCTSTR szName, int Size, int Orient, int W, int H);
BOOL VC_API vlPageDelete    (int Index);
int  VC_API vlPageActive    (int Mode, int Index);
int  VC_API vlPageCount     ();
int  VC_API vlPageIndex     (LPCTSTR szName, int ID);
int  VC_API vlLayerAdd      (LPCTSTR szName, double LineWidth, COLORREF LineColor, COLORREF FillColor);
BOOL VC_API vlLayerDelete   (int Index);
int  VC_API vlLayerActive   (int Index);
int  VC_API vlLayerCount    ();
int  VC_API vlLayerIndex    (LPCTSTR szName, int ID);
int  VC_API vlStLineAdd     (LPCTSTR szName, LPCTSTR szDesc);
BOOL VC_API vlStLineDelete  (int Index);
int  VC_API vlStLineActive  (int Index);
int  VC_API vlStLineCount   ();
int  VC_API vlStLineIndex   (LPCTSTR szName, int ID);
int  VC_API vlStTextAdd     (LPCTSTR szName, LPCTSTR szFont, double Width, double Oblique, int Prec, BOOL Filled, BOOL Bold);
BOOL VC_API vlStTextDelete  (int Index);
int  VC_API vlStTextActive  (int Index);
int  VC_API vlStTextCount   ();
int  VC_API vlStTextIndex   (LPCTSTR szName, int ID);
BOOL VC_API vlStTextReload  ();
int  VC_API vlStHatchAdd    (LPCTSTR szName, LPCTSTR szDesc);
BOOL VC_API vlStHatchDelete (int Index);
int  VC_API vlStHatchActive (int Index);
int  VC_API vlStHatchCount  ();
int  VC_API vlStHatchIndex  (LPCTSTR szName, int ID);
int  VC_API vlStDimAdd      (LPCTSTR szName);
BOOL VC_API vlStDimDelete   (int Index);
int  VC_API vlStDimActive   (int Index);
int  VC_API vlStDimCount    ();
int  VC_API vlStDimIndex    (LPCTSTR szName, int ID);
int  VC_API vlStPointAdd    (LPCTSTR szName);
BOOL VC_API vlStPointDelete (int Index);
int  VC_API vlStPointActive (int Index);
int  VC_API vlStPointCount  ();
int  VC_API vlStPointIndex  (LPCTSTR szName, int ID);
int  VC_API vlGrPointAdd    (LPCTSTR szName);
BOOL VC_API vlGrPointDelete (int Index);
int  VC_API vlGrPointActive (int Index);
int  VC_API vlGrPointCount  ();
int  VC_API vlGrPointIndex  (LPCTSTR szName, int ID);
int  VC_API vlViewSave      (LPCTSTR szName);
BOOL VC_API vlViewDelete    (int Index);
int  VC_API vlViewRestore   (int Index);
int  VC_API vlViewCount     ();
int  VC_API vlViewIndex     (LPCTSTR szName, int ID);
int  VC_API vlPrnRectAdd    (double X, double Y, double W, double H, double Angle);
BOOL VC_API vlPrnRectDelete (int Index);
int  VC_API vlPrnRectCount  ();
BOOL VC_API vlPrnRectPrint  (int Index, HDC hPrintDC, double ScaleX, double ScaleY, double OriginX, double OriginY);
int  VC_API vlPrnRectAuto   (double Width, double Height);
BOOL VC_API vlBlockBegin    ();
int  VC_API vlBlockAdd      (LPCTSTR szName, double x, double y);
int  VC_API vlBlockAddF     (LPCTSTR szFileName, LPCTSTR szBlockName);
BOOL VC_API vlBlockDelete   (int Index);
int  VC_API vlBlockActive   (int Index);
int  VC_API vlBlockCount    ();
int  VC_API vlBlockIndex    (LPCTSTR szName, int ID);