Packages/VECAD52/vecad52/VECAD/api_VecApi.bas


Public Const VS_PAPER_UNLIMITED = 19401
Public Const VS_PAPER_A0 = 19402
Public Const VS_PAPER_A1 = 19403
Public Const VS_PAPER_A2 = 19404
Public Const VS_PAPER_A3 = 19405
Public Const VS_PAPER_A4 = 19406
Public Const VS_PAPER_A5 = 19407
Public Const VS_PAPER_A6 = 19408
Public Const VS_PAPER_B0 = 19409
Public Const VS_PAPER_B1 = 19410
Public Const VS_PAPER_B2 = 19411
Public Const VS_PAPER_B3 = 19412
Public Const VS_PAPER_B4 = 19413
Public Const VS_PAPER_B5 = 19414
Public Const VS_PAPER_B6 = 19415
Public Const VS_PAPER_C0 = 19416
Public Const VS_PAPER_C1 = 19417
Public Const VS_PAPER_C2 = 19418
Public Const VS_PAPER_C3 = 19419
Public Const VS_PAPER_C4 = 19420
Public Const VS_PAPER_C5 = 19421
Public Const VS_PAPER_C6 = 19422
Public Const VS_PAPER_ANSI_A = 19423
Public Const VS_PAPER_ANSI_B = 19424
Public Const VS_PAPER_ANSI_C = 19425
Public Const VS_PAPER_ANSI_D = 19426
Public Const VS_PAPER_ANSI_E = 19427
Public Const VS_PAPER_LETTER = 19428
Public Const VS_PAPER_LEGAL = 19429
Public Const VS_PAPER_EXECUTIVE = 19430
Public Const VS_PAPER_LEDGER = 19431
Public Const VS_PAPER_USER = 19432


'********************************************************************
' VeCAD types
'********************************************************************

' VeCAD point
Type VLPOINT
  X As Double
  Y As Double
End Type


' VeCAD arc
Type VLARC
  Cen As VLPOINT
  Rh As Double
  Rv As Double
  Ang0 As Double
  AngArc As Double
  AngRot As Double
End Type


' Window Rectangle
Type RECT
    Left As Long
    Top As Long
    Right As Long
    Bottom As Long
End Type

' used to pass parameters with VM_BEGINPAINT message
Type VLPAINTSTRUCT
    dc As Object        ' output device context
    rcPaint As RECT     ' output window rectangle
    DwgLeft As Double   ' drawing's limits for the window
    DwgBottom As Double
    DwgRight As Double
    DwgTop As Double
    ScaleX As Double    ' horiz. scale, mm/pixel
    ScaleY As Double    ' vert. scale, mm/pixel
End Type

' Properties of "Navigator" window (aerial view)
Type VLNAVIGATOR
  Left As Long
  Top As Long
  Width As Long
  Height As Long
  ColorZoomRect As Long
  Realtime As Long
End Type

' Properties of "Layers Manager" window
Type VLLAYWIN
  Left As Long
  Top As Long
  Width As Long
  Height As Long
End Type


'********************************************************************
' VeCAD functions
'********************************************************************

Public Declare Function vlGetVersion Lib "vecad52.dll" () As Long

' Registration for user copy of VeCAD DLL
Public Declare Function vlRegistration Lib "vecad52.dll" (ByVal RegCode As Long) As Boolean

' Set application-defined function that will receive messages from VeCAD
Public Declare Function vlSetMsgHandler Lib "vecad52.dll" (ByVal pfDwgProc As Any) As Boolean

'/////////////////////////////////////////////////
'// VeCAD window functions
Public Declare Function vlWndCreate Lib "vecad52.dll" (ByVal hWndParent As Long, ByVal Style As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Long
Public Declare Function vlWndResize Lib "vecad52.dll" (ByVal hwnd As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Boolean
Public Declare Function vlWndSetTitle Lib "vecad52.dll" (ByVal hwnd As Long, ByVal Title As String) As Boolean
Public Declare Function vlWndSetMaxRect Lib "vecad52.dll" (ByVal hwnd As Long, ByRef pRect As RECT) As Boolean
Public Declare Function vlWndSetCursor Lib "vecad52.dll" (ByVal hwnd As Long, ByVal hCursor As Long) As Boolean

'/////////////////////////////////////////////////
'// Drawing object functions
Public Declare Function vlDocCreate Lib "vecad52.dll" (ByVal hwVec As Long) As Long
Public Declare Function vlDocDelete Lib "vecad52.dll" (ByVal iDwg As Long) As Boolean
Public Declare Function vlDocSetActive Lib "vecad52.dll" (ByVal iDwg As Long) As Long
Public Declare Function vlDocGetActive Lib "vecad52.dll" () As Long
Public Declare Function vlDocCopy Lib "vecad52.dll" (ByVal iDwgSrc As Long, ByVal iDwgDest As Long, ByVal Mode As Long) As Boolean


'/////////////////////////////////////////////////
'// All Next functions work with current drawing that
'// are set by vlDwgSetCurrent function

'/////////////////////////////////////////////////
'// Layout (pages,layers, text styles, etc...
'// Parameters can be accessed via vlData...

Public Declare Function vlPageAdd Lib "vecad52.dll" (ByVal Name As String, ByVal Size As Long, ByVal Orient As Long, ByVal W As Long, ByVal H As Long) As Long
Public Declare Function vlPageDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlPageActive Lib "vecad52.dll" (ByVal Mode As Long, ByVal Index As Long) As Long
Public Declare Function vlPageCount Lib "vecad52.dll" () As Long
Public Declare Function vlPageIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlLayerAdd Lib "vecad52.dll" (ByVal Name As String, ByVal LineWidth As Double, ByVal LineColor As Long, ByVal FillColor As Long) As Long
Public Declare Function vlLayerDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlLayerActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlLayerCount Lib "vecad52.dll" () As Long
Public Declare Function vlLayerIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlStLineAdd Lib "vecad52.dll" (ByVal Name As String, ByVal Desc As String) As Long
Public Declare Function vlStLineDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlStLineActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlStLineCount Lib "vecad52.dll" () As Long
Public Declare Function vlStLineIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlStTextAdd Lib "vecad52.dll" (ByVal Name As String, ByVal Font As String, ByVal Width As Double, ByVal Oblique As Double, ByVal Prec As Long, ByVal Filled As Boolean, ByVal Bold As Boolean) As Long
Public Declare Function vlStTextDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlStTextActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlStTextCount Lib "vecad52.dll" () As Long
Public Declare Function vlStTextIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long
Public Declare Function vlStTextReload Lib "vecad52.dll" () As Boolean

Public Declare Function vlStHatchAdd Lib "vecad52.dll" (ByVal Name As String, ByVal Desc As String) As Long
Public Declare Function vlStHatchDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlStHatchActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlStHatchCount Lib "vecad52.dll" () As Long
Public Declare Function vlStHatchIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlStDimAdd Lib "vecad52.dll" (ByVal Name As String) As Long
Public Declare Function vlStDimDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlStDimActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlStDimCount Lib "vecad52.dll" () As Long
Public Declare Function vlStDimIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlStPointAdd Lib "vecad52.dll" (ByVal Name As String) As Long
Public Declare Function vlStPointDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlStPointActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlStPointCount Lib "vecad52.dll" () As Long
Public Declare Function vlStPointIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlGrPointAdd Lib "vecad52.dll" (ByVal Name As String) As Long
Public Declare Function vlGrPointDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlGrPointActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlGrPointCount Lib "vecad52.dll" () As Long
Public Declare Function vlGrPointIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlViewSave Lib "vecad52.dll" (ByVal Name As String) As Long
Public Declare Function vlViewDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlViewRestore Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlViewCount Lib "vecad52.dll" () As Long
Public Declare Function vlViewIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

Public Declare Function vlPrnRectAdd Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal W As Double, ByVal H As Double, ByVal Angle As Double) As Long
Public Declare Function vlPrnRectDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlPrnRectCount Lib "vecad52.dll" () As Long
Public Declare Function vlPrnRectPrint Lib "vecad52.dll" (ByVal Index As Long, ByVal hPrintDC As Long, ByVal ScaleX As Double, ByVal ScaleY As Double, ByVal OriginX As Double, ByVal OriginY As Double) As Boolean
Public Declare Function vlPrnRectAuto Lib "vecad52.dll" (ByVal Width As Double, ByVal Height As Double) As Long

Public Declare Function vlBlockBegin Lib "vecad52.dll" () As Boolean
Public Declare Function vlBlockAdd Lib "vecad52.dll" (ByVal Name As String, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function vlBlockAddF Lib "vecad52.dll" (ByVal FileName As String, ByVal BlockName As String) As Long
Public Declare Function vlBlockDelete Lib "vecad52.dll" (ByVal Index As Long) As Boolean
Public Declare Function vlBlockActive Lib "vecad52.dll" (ByVal Index As Long) As Long
Public Declare Function vlBlockCount Lib "vecad52.dll" () As Long
Public Declare Function vlBlockIndex Lib "vecad52.dll" (ByVal Name As String, ByVal ID As Long) As Long

